src/styles/features/links.css
/* Link blocks */

#linkblocks {
    --in-out-bounce: cubic-bezier(0.68, -0.2, 0.265, 1.2);
}

#linkblocks.hidden {
    display: none;
}

.select-all .link div,
.select-all .link span {
    /* split div and span instead of just ".link" */
    /* to keep folder blur with filter */
    filter: grayscale(1) brightness(0.6);
}

.select-all .selected div,
.select-all .selected span {
    filter: none;
}

.select-all.inline .link:hover span,
.select-all.text .link:hover span {
    text-decoration: none;
}

.text-left #link-mini,
.text-left .link-list {
    justify-content: start;
}

.text-left #link-mini {
    text-align: left;
}

.text-left .link-group {
    align-items: start;
}

.text-right #link-mini,
.text-right .link-list {
    justify-content: end;
}

.text-right #link-mini {
    text-align: right;
}

.text-right .link-group {
    align-items: end;
}

/* Link Group */

.link-group {
    display: flex;
    flex-direction: column;
    align-items: center;
    row-gap: 1em;
}

.link-group.pinned {
    margin-bottom: 3em;
}

.link-group.hiding .link-list {
    opacity: 0;
}

.link-group.hiding .link {
    transform: scale(0.9);
}

/* Overengineered brightness because filter disables backdrop with .link-folder */
.link-elem:active,
.link-folder:active img,
.link-group.hiding .link-elem,
.link-group.hiding .link-folder img {
    filter: brightness(0.8);
}

.link-folder:active div,
.link-group.hiding .link-folder div {
    backdrop-filter: blur(1em) brightness(0.8);
    -webkit-backdrop-filter: blur(1em) brightness(0.8);
}

.link-group.in-folder .link-list {
    display: flex; /* do not remove, fixes backdrop filter on Safari */
    padding: var(--folder-padding);
    background-color: #fff2;
    border: 1px solid #fff4;
    backdrop-filter: blur(2em);
    -webkit-backdrop-filter: blur(2em);
}

.link-list {
    position: relative;
    display: inline-flex;
    visibility: visible;
    flex-wrap: wrap;
    justify-content: center;
    row-gap: var(--row-gap);
    column-gap: var(--column-gap);
    min-height: var(--min-height);
    min-width: 6em;
    padding: 0;
    margin: 0;
    max-width: var(--links-width);
    background-color: transparent;
    border: 1px solid transparent;
    border-radius: var(--border-radius);
    z-index: 2;
    transition: opacity 0.05s var(--out-cubic);
}

/* Link titles */

.link-title {
    display: none;
    max-width: 26ch;
    padding: 0.2em 1em;
    overflow: hidden;
    white-space: nowrap;
    text-align: center;
    text-overflow: ellipsis;
    opacity: 0.7;
    color: var(--font-color);
    font-size: 1em;
    border-radius: 8px;
    border: 1px solid transparent;
    background-color: transparent;
    cursor: pointer;
    transition: transform 0.2s var(--in-out-bounce);
}

.link-group .link-title {
    max-width: 100%;
}

.with-groups .link-group.pinned .link-title,
.link-group.in-folder .link-title {
    display: initial;
}

.link-title:hover {
    opacity: 1;
}

/*
 * Annoying class naming overlap between edits and link groups "selected"
 * Edit: selected
 * Group: selected-group
 */

.link-title.selected,
.link-title.selected.selected-group {
    opacity: 1;
    outline: 2px solid rgb(var(--accent-color));
    background-color: rgb(var(--accent-color) / 0.15);
}

.link-group.pinned .link-title,
.link-title.selected-group {
    opacity: 1;
    cursor: initial;
    border-color: #fff1;
    background-color: #fff2;
    backdrop-filter: blur(2em);
    -webkit-backdrop-filter: blur(2em);
}

.link-group.in-folder .link-title {
    user-select: none;
    pointer-events: none;
    -webkit-user-select: none;
}

/* Link */

.link {
    transition: transform 0.2s var(--in-out-bounce), opacity 0.1s var(--in-out-bounce), filter 0.06s;
    width: var(--block-size);
    cursor: pointer;
    touch-action: none;
}

.link div,
.link img {
    transition-duration: 0.2s;
    transition-timing-function: var(--out-cubic);
    transition-property: transform, box-shadow, border-color, background-color;

    /* helps with scaling artifacts */
    will-change: transform;
}

.link div {
    margin: auto;
    flex-shrink: 0;
    width: var(--icon-size);
    height: var(--icon-size);
    box-sizing: border-box;
}

.link a {
    color: var(--font-color);
    cursor: pointer;
    text-decoration: none;
    transition: width 0.2s var(--out-cubic);
    -webkit-touch-callout: none;
}

.in-folder .link a {
    color: rgb(var(--font-on-blur-color));
}

.link img {
    width: 100%;
    height: 100%;
}

.link span {
    display: none;
    width: 100%;
    padding-top: 0.4em;
    line-height: 1.2em;
    max-height: 3.6em;
    overflow: hidden;
    word-wrap: break-word;
}

.titles .link span {
    display: block;
}

.titles.small .link span {
    display: inline;
    width: unset;
    top: 3.5em;
}

.backgrounds .link div {
    background-color: white;
    border-color: white;
    box-shadow: 0 1px 5px rgb(0 0 0 / 0.2);
}

.backgrounds .link div:hover {
    box-shadow: unset;
}

.link.removed {
    margin: 0 calc(var(--column-gap) / 2 * -1); /* minus half of gap */
    width: 0 !important;
    opacity: 0;
    overflow: hidden;
    transition: width 0.3s 0.3s var(--out-cubic), margin 0.3s 0.3s var(--out-cubic), opacity 0.3s var(--out-cubic);
}

.link.removed span {
    min-height: 0 !important;
    max-height: 0 !important;
    transition: max-height 0.3s 0.3s var(--out-cubic);
}

.link.removed div {
    transform: scale(0.6);
}

#linkblocks.large .link.selected div,
#linkblocks.medium .link.selected div,
#linkblocks.small .link.selected div {
    box-shadow: 0px 5px 15px rgb(0 0 0 / 0.2);
    outline: 0.3em solid rgb(var(--accent-color));
}

#linkblocks.inline .link-folder.selected,
#linkblocks.inline .link.selected a,
#linkblocks.text .link-folder.selected,
#linkblocks.text .link.selected a {
    border-radius: 0.5em;
    outline: 0.2em solid rgb(var(--accent-color));
    background-color: rgb(0 114 238 / 0.1333333333);
}
/* ... */

